--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -29,5 +29,7 @@ layout: headless
   </article>
 </main>
 
+{%- if page.photoswipe %}
 {% include photoswipe.html %}
+{%- endif %}
 {% include post_scripts.html %}
