--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,5 +12,7 @@ layout: default
   </article>
 </main>
 
+{%- if page.photoswipe %}
 {% include photoswipe.html %}
+{%- endif %}
 {% include post_scripts.html %}
