--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,5 +29,7 @@ layout: default
   </article>
 </main>
 
+{%- if page.photoswipe %}
 {% include photoswipe.html %}
+{%- endif %}
 {% include post_scripts.html %}
