--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,7 +7,6 @@ layout: headless
 {%- elsif site.data.authors %}
 {%- assign author = site.data.authors[0] %}
 {%- endif %}
-
 <section class="author-profile" itemprop="author" itemscope itemtype="http://schema.org/Person">
   {%- if author.cover %}
   <div class="author-cover image-bg" style="background-image: url('{{ author.cover | prepend: site.baseurl }}')"></div>
@@ -97,5 +96,7 @@ layout: headless
   </article>
 </main>
 
+{%- if page.photoswipe %}
 {% include photoswipe.html %}
+{%- endif %}
 {% include post_scripts.html %}
