--- a/_sass/prism_customize.scss
+++ b/_sass/prism_customize.scss
@@ -5,6 +5,9 @@ pre {
     border: 1px solid #eeeeee;
     background: rgba(250,250,250,0.8);
 }
+pre[class*=language-] {
+    background: #f5f2f0;
+}
 // 現サイトの記事の横幅に合わせる
 pre code {
     display: block;
