--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -342,3 +342,35 @@ img {
 .single-book span.katex-html {
     font-size: 95%;
 }
+// TOC (目次)
+.single-book #toc ol {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+.single-book #toc summary {
+    display: list-item;
+}
+.single-book #toc summary:hover {
+    text-decoration: underline;
+}
+.single-book #toc ol.counter-set-1 { counter-set: section 1; }
+.single-book #toc ol.counter-set-2 { counter-set: section 2; }
+.single-book #toc ol.counter-set-3 { counter-set: section 3; }
+.single-book #toc ol.counter-set-4 { counter-set: section 4; }
+.single-book #toc ol.counter-set-5 { counter-set: section 5; }
+.single-book #toc ol.counter-set-6 { counter-set: section 6; }
+.single-book #toc ol.counter-set-7 { counter-set: section 7; }
+.single-book #toc ol.counter-set-8 { counter-set: section 8; }
+.single-book #toc ol.counter-set-9 { counter-set: section 9; }
+.single-book #toc ol.counter-set-10 { counter-set: section 10; }
+.single-book #toc ol.counter-set-11 { counter-set: section 11; }
+.single-book #toc ol.counter-set-12 { counter-set: section 12; }
+.single-book #toc ol {
+    counter-reset: section;
+    list-style-type: none;
+}
+.single-book #toc ol li:before {
+    content: counters(section, ".") ". ";
+    counter-increment: section;
+}
