update prism.js powershell prompt parser

--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -29,7 +29,7 @@
   // PowerShellの字句解析でPromptの部分「PS>」もtokenにする
   //（デフォルトだとPSがfunctionと判定されるので、insertBeforeで先に評価する）
   Prism.languages.insertBefore('powershell', 'function', {
-    'prompt': /^PS> /m,
+    'prompt': /^(?:PS> |>> )/m,
   });
   Prism.languages.vb = Prism.languages.vbnet; // Markdownで言語が「vb」のとき、Prism.jsの「vbnet」を適用する
   Prism.languages.ps1 = Prism.languages.powershell; // 「ps1」のとき、Prism.sjの「powershell」を適用する
