add scss to @charset "UTF-8"

--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* some data is duplicated from other files to allow an easy merge of updates 
    from the forked theme without destroying the css for this page */
 
