--- a/_sass/prism_original.scss
+++ b/_sass/prism_original.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* PrismJS 1.27.0
 https://prismjs.com/download.html?#themes=prism&languages=markup+css+clike+javascript+aspnet+bash+basic+c+csharp+cpp+coffeescript+diff+elixir+go+java+json+kotlin+latex+makefile+markdown+markup-templating+perl+php+powershell+python+ruby+rust+scss+scala+sql+swift+vbnet+yaml */
 /**
