--- a/css/screen.scss
+++ b/css/screen.scss
@@ -3,6 +3,7 @@
 # only Main files contain this front matter, not partials.
 # color-profile datalist merged with forked file.
 ---
+@charset "UTF-8";
 
 @import 'normalize';
 @import 'general';
