--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 
 // header
 .main-header {
@@ -338,7 +339,7 @@ img {
     font-size: 95%;
 }
 
-// TOC (目次)
+// TOC
 .single-book #toc ol {
     margin-left: auto;
     margin-right: auto;
@@ -371,7 +372,7 @@ img {
     counter-increment: subsection;
 }
 
-// シリーズ一覧
+// Series
 .single-book .sections ol {
     margin-left: auto;
     margin-right: auto;
