--- a/_sass/media1080_additions.scss
+++ b/_sass/media1080_additions.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @media only screen and (max-width: 1080px) {
     .single-post figcaption::before {
         display: none; /* bugfix, base theme hides it too late (max-width: 780px)  */
