prism_customize.scss: add language-fig

--- a/_sass/prism_customize.scss
+++ b/_sass/prism_customize.scss
@@ -18,6 +18,12 @@ pre code {
     margin: auto;
 }
 
+//--- Figures ---
+// ASCII Art
+.language-fig {
+    font-size: 95%;
+}
+
 //--- Inline code ---
 :not(pre) > code {
     padding: .1em;
