--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -22,15 +22,15 @@
 
 <!-- Prism -->
 <script type="text/javascript">
-  // Bashの字句解析でPromptの部分「$」「~$」「~]#」「%」もtokenにする
+  // Bashの字句解析でPromptの部分「$」「~$」「~]#」「%」「[servername]$」もtokenにする。
   Prism.languages.insertBefore('bash', 'comment', {
-    'prompt': /^\~\]?[#$] |^[\$%] /m,
+    'prompt': /^(?:\~\]?|\[[^\]]+\])[#$] |^[\$%] /m,
   });
-  // PowerShellの字句解析でPromptの部分「PS>」もtokenにする
+  // PowerShellの字句解析でPromptの部分「PS>」もtokenにする。
   //（デフォルトだとPSがfunctionと判定されるので、insertBeforeで先に評価する）
   Prism.languages.insertBefore('powershell', 'function', {
     'prompt': /^(?:PS> |>> )/m,
   });
   Prism.languages.vb = Prism.languages.vbnet; // Markdownで言語が「vb」のとき、Prism.jsの「vbnet」を適用する
-  Prism.languages.ps1 = Prism.languages.powershell; // 「ps1」のとき、Prism.sjの「powershell」を適用する
+  Prism.languages.ps1 = Prism.languages.powershell; // 「ps1」のとき、Prism.jsの「powershell」を適用する
 </script>
