css: update post title max-width

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -7,7 +7,8 @@
     }
     .post-title, .post-meta {
         // width: 100%;
-        max-width: 850px;
+        //max-width: 850px;
+        max-width: 90%;
         margin: auto;
     }
 
