--- a/_sass/override.scss
+++ b/_sass/override.scss
@@ -8,8 +8,8 @@
 }
 
 ol {
-    width: 90%;
-    max-width: 650px;
+    // width: 90%;
+    // max-width: 650px;
     margin-left: auto;
     margin-right: auto;
     word-wrap: break-word;
