--- a/_sass/override.scss
+++ b/_sass/override.scss
@@ -14,6 +14,10 @@ ol {
     margin-right: auto;
     word-wrap: break-word;
 }
+.footnotes ol {
+    width: 90%;
+    max-width: 650px;
+}
 
 .go-to-top {
     &:focus {
